--- a/app/src/main/res/layout/recyclerview_layout.xml
+++ b/app/src/main/res/layout/recyclerview_layout.xml
@@ -20,45 +20,77 @@
 
             <ImageView
                     android:layout_width="70dp"
-                    android:layout_height="70dp" tools:srcCompat="@tools:sample/avatars[0]"
+                    android:layout_height="70dp"
+                    tools:srcCompat="@tools:sample/avatars[0]"
                     android:id="@+id/ivCoverImage"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+            />
             <TextView
                     android:text="Song Title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvTitle" app:layout_constraintStart_toEndOf="@+id/ivCoverImage"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:layout_marginEnd="8dp"
+                    android:id="@+id/tvTitle"
+                    android:textSize="24sp"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:scrollHorizontally="true"
+                    app:layout_constraintStart_toEndOf="@+id/ivCoverImage"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toStartOf="@+id/tvDuration"/>
             <TextView
                     android:text="Artist"
-                    android:layout_width="wrap_content"
-                    android:layout_height="23dp"
-                    android:id="@+id/tvArtist" app:layout_constraintStart_toEndOf="@+id/ivCoverImage"
+                    android:layout_width="88dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvArtist"
+                    app:layout_constraintStart_toEndOf="@+id/ivCoverImage"
                     android:layout_marginStart="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-                    android:layout_marginTop="8dp" android:textSize="18sp" android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:scrollHorizontally="true"
             />
             <TextView
                     android:text="Album"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvAlbum"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/tvArtist"
-                    android:layout_marginStart="8dp" android:textSize="18sp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintStart_toEndOf="@+id/tvArtist"
+                    android:layout_marginStart="8dp"
+                    android:textSize="18sp"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:scrollHorizontally="true"
+            />
             <TextView
                     android:text="4:00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvDuration" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    android:id="@+id/tvDuration"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
