--- a/app/src/main/res/layout/recyclerview_layout.xml
+++ b/app/src/main/res/layout/recyclerview_layout.xml
@@ -9,10 +9,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/cardView"
+            android:foreground="@drawable/ripple_effect"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="4dp" app:cardElevation="10dp" android:layout_marginTop="4dp"
+            android:layout_marginBottom="2dp" app:cardElevation="5dp" android:layout_marginTop="2dp"
             app:layout_constraintTop_toTopOf="parent">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-            />
+                    android:layout_marginStart="2dp"/>
             <TextView
                     android:text="Song Title"
                     android:layout_width="0dp"
