--- a/app/src/main/res/layout/activity_media_controller.xml
+++ b/app/src/main/res/layout/activity_media_controller.xml
@@ -68,7 +68,7 @@
             android:contentDescription="TODO" android:background="@color/colorTransparent"
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnShuffle"
+            app:layout_constraintStart_toEndOf="@+id/ibShuffle"
             android:layout_marginStart="24dp" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toStartOf="@+id/ibPause"/>
     <TextView
@@ -111,7 +111,7 @@
             android:background="@color/colorTransparent"
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="40dp" app:layout_constraintEnd_toStartOf="@+id/btnRepeat"/>
+            android:layout_marginEnd="40dp" app:layout_constraintEnd_toStartOf="@+id/ibRepeat"/>
     <TextView
             android:text="Title"
             android:layout_width="wrap_content"
@@ -127,21 +127,23 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/ivAlbumArt"/>
-    <Button
+    <ImageButton
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/btnShuffle"
+            android:id="@+id/ibShuffle"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@drawable/ic_shuffle"/>
-    <Button
+            app:srcCompat="@drawable/ic_shuffle"
+            android:background="@drawable/ripple_effect"/>
+    <ImageButton
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/btnRepeat"
+            android:id="@+id/ibRepeat"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@drawable/ic_repeat"/>
+            app:srcCompat="@drawable/ic_repeat"
+            android:background="@drawable/ripple_effect"/>
     <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
