--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -106,13 +106,12 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:textSize="18sp"
+            android:textAlignment="viewStart"
             app:layout_constraintStart_toEndOf="@+id/ivAlbumArt"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/ibPrevious"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:textSize="18sp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvArtist" android:textAlignment="viewStart"/>
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/ibPrevious" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvArtist"/>
     <TextView
             android:text="Artist"
             android:layout_width="0dp"
@@ -130,28 +129,21 @@
             app:layout_constraintEnd_toStartOf="@+id/ibPrevious"
             android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.0" android:textAlignment="viewStart"/>
-    <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/pbSeekBar"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/ibPlay" android:visibility="gone"/>
     <TextView
-            android:text="3:49"
+            android:text="0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvDuration" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/pbSeekBar" android:layout_marginTop="2dp"
-            android:textSize="12sp" android:visibility="gone"/>
+            android:id="@+id/tvTotalDuration" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textSize="12sp" android:visibility="gone" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar"/>
     <TextView
             android:text="00:00"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvProgressTimer" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/tvCurrentDuration" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/pbSeekBar"
-            android:textSize="12sp" android:visibility="gone"/>
+            android:textSize="12sp" android:visibility="gone" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/ibSwapView"/>
     <ImageButton
             android:layout_width="35dp"
             android:layout_height="35dp"
@@ -179,6 +171,12 @@
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/ivAlbumArt"/>
+    <SeekBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/ibNext"
+            android:visibility="gone"/>
 
     <!-- CardView Start here
     <android.support.v7.widget.CardView
