--- a/app/src/main/res/layout/recyclerview_layout.xml
+++ b/app/src/main/res/layout/recyclerview_layout.xml
@@ -31,7 +31,7 @@
                     android:text="Song Title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvTitle"
+                    android:id="@+id/rv_tvTitle"
                     android:textSize="24sp"
                     android:singleLine="true"
                     android:ellipsize="marquee"
@@ -42,15 +42,15 @@
                     app:layout_constraintStart_toEndOf="@+id/ivCoverImage"
                     android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/tvDuration"/>
+                    app:layout_constraintEnd_toStartOf="@+id/rv_tvTotalDuration"/>
             <TextView
                     android:text="Artist"
                     android:layout_width="88dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvArtist"
+                    android:id="@+id/rv_tvArtist"
                     app:layout_constraintStart_toEndOf="@+id/ivCoverImage"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                    app:layout_constraintTop_toBottomOf="@+id/rv_tvTitle"
                     android:layout_marginTop="8dp"
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"
@@ -66,14 +66,14 @@
                     android:text="Album"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvAlbum"
+                    android:id="@+id/rv_tvAlbum"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                    app:layout_constraintTop_toBottomOf="@+id/rv_tvTitle"
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="16dp"
-                    app:layout_constraintStart_toEndOf="@+id/tvArtist"
+                    app:layout_constraintStart_toEndOf="@+id/rv_tvArtist"
                     android:layout_marginStart="8dp"
                     android:textSize="18sp"
                     android:singleLine="true"
@@ -87,7 +87,7 @@
                     android:text="4:00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvDuration"
+                    android:id="@+id/rv_tvTotalDuration"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginTop="8dp"
